--- a/html.html
+++ b/html.html
@@ -9,3 +9,4 @@
     <p style="color:white;background:gray;border:5px solid blue">this is a test of this web hosting platform</p>
     <image align=center src="/images/rick.gif" alt="rickroll"></image>
 </body>
+</html>
