--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body style="background-image:url(/images/background_home.png)">
-    <h1 align=center>hello friends</h1>
+    <h1 style="color:white" align=center>hello friends</h1>
     <p style="color:white;background:gray;border:5px solid blue">this is a test of this web hosting platform</p>
-    <image align=center style="border:8px solid black" src="/images/rick.gif" alt="rickroll"></image>
+    <image align=center style="border:5px solid white" src="/images/rick.gif" alt="rickroll"></image>
 </body>
 </html>
